# 2020-Sentiment-Analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
Unit-1-Setup-and-Basics/1.3-Intro-to-Python/: python_basics_lecture.ipynb  python_basics_lecture_instructor.ipynb  python_basics_lecture_instructor_key.ipynb
data/raw/: election-tweets-initial.csv  first-batch.csv  pro-biden-tweets.csv  pro-trump-tweets.csv
notebooks/: experimentation.ipynb
